StereoKitC/stereokit.h


typedef int32_t bool32_t;
typedef struct vec2 {
	float x;
	float y;
} vec2;
typedef struct vec3 {
	float x;
	float y;
	float z;
} vec3;
typedef struct quat {
	float x;
	float y;
	float z; 
	float w;
} quat;
typedef struct ray_t {
	vec3 pos;
	vec3 dir;
} ray_t;
typedef struct pose_t {
	vec3 position;
	quat orientation;
} pose_t;
SK_API sound_t      sound_generate       (float (*function)(float sample_time), float duration);
typedef enum text_context_ {
	text_context_text = 1,
	text_context_number = 2,
	text_context_uri = 10,
	text_context_password = 18,
} text_context_;
SK_API bool32_t platform_file_picker_visible();
SK_API bool32_t platform_read_file          (const char *filename_utf8,  void **out_data, size_t *out_size);
SK_API bool32_t platform_write_file         (const char *filename_utf8,  void *data, size_t size);
SK_API bool32_t platform_keyboard_get_force_fallback();
SK_API void     platform_keyboard_set_force_fallback(bool32_t force_fallback);
SK_API void     platform_keyboard_show              (bool32_t visible, text_context_ type);
SK_API bool32_t platform_keyboard_visible           ();
typedef enum input_source_ {
	input_source_any           = 0x7FFFFFFF,
	input_source_hand          = 1 << 0,
	input_source_hand_left     = 1 << 1,
	input_source_hand_right    = 1 << 2,
	input_source_gaze          = 1 << 4,
	input_source_gaze_head     = 1 << 5,
	input_source_gaze_eyes     = 1 << 6,
	input_source_gaze_cursor   = 1 << 7,
	input_source_can_press     = 1 << 8,
} input_source_;
typedef enum handed_ {
	handed_left                = 0,
	handed_right               = 1,
	handed_max                 = 2,
} handed_;
typedef enum button_state_ {
	button_state_inactive      = 0,
	button_state_active        = 1 << 0,
	button_state_just_inactive = 1 << 1,
	button_state_just_active   = 1 << 2,
	button_state_changed       = button_state_just_inactive | button_state_just_active,
	button_state_any           = 0x7FFFFFFF,
} button_state_;
typedef enum track_state_ {
	track_state_lost           = 0,
	track_state_inferred       = 1,
	track_state_known          = 2,
} track_state_;
typedef struct pointer_t {
	input_source_ source;
	button_state_ tracked;
	button_state_ state;
	ray_t         ray;
	quat          orientation;
} pointer_t;
typedef struct hand_joint_t {
	vec3          position;
	quat          orientation;
	float         radius;
} hand_joint_t;
typedef struct hand_t {
	hand_joint_t  fingers[5][5];
	pose_t        wrist;
	pose_t        palm;
	vec3          pinch_pt;
	handed_       handedness;
	button_state_ tracked_state;
	button_state_ pinch_state;
	button_state_ grip_state;
	float         size;
	float         pinch_activation;
	float         grip_activation;
} hand_t;
typedef struct controller_t {
	pose_t        pose;
	pose_t        aim;
	button_state_ tracked;
	track_state_  tracked_pos;
	track_state_  tracked_rot;
	button_state_ stick_click;
	button_state_ x1;
	button_state_ x2;
	float         trigger;
	float         grip;
	vec2          stick;
} controller_t;
typedef struct mouse_t {
	bool32_t      available;
	vec2          pos;
	vec2          pos_change;
	float         scroll;
	float         scroll_change;
} mouse_t;
typedef enum key_ {
	key_none      = 0x00,
	key_mouse_left = 0x01,
	key_mouse_right = 0x02,
	key_mouse_center = 0x04,
	key_mouse_forward = 0x05,
	key_mouse_back = 0x06,
	key_backspace = 0x08,
	key_tab       = 0x09,
	key_return    = 0x0D,
	key_shift     = 0x10,
	key_ctrl      = 0x11,
	key_alt       = 0x12,
	key_caps_lock = 0x14,
	key_esc       = 0x1B,
	key_space     = 0x20,
	key_end       = 0x23,
	key_home      = 0x24,
	key_left      = 0x25,
	key_right     = 0x27,
	key_up        = 0x26,
	key_down      = 0x28,
	key_page_up   = 0x21,
	key_page_down = 0x22,
	key_printscreen=0x2A,
	key_insert    = 0x2D,
	key_del       = 0x2E,
	key_0 = 0x30,
	key_1 = 0x31,
	key_2 = 0x32,
	key_3 = 0x33,
	key_4 = 0x34,
	key_5 = 0x35,
	key_6 = 0x36,
	key_7 = 0x37,
	key_8 = 0x38,
	key_9 = 0x39,
	key_a = 0x41,
	key_b = 0x42,
	key_c = 0x43,
	key_d = 0x44,
	key_e = 0x45,
	key_f = 0x46,
	key_g = 0x47,
	key_h = 0x48,
	key_i = 0x49,
	key_j = 0x4A,
	key_k = 0x4B,
	key_l = 0x4C,
	key_m = 0x4D,
	key_n = 0x4E,
	key_o = 0x4F,
	key_p = 0x50,
	key_q = 0x51,
	key_r = 0x52,
	key_s = 0x53,
	key_t = 0x54,
	key_u = 0x55,
	key_v = 0x56,
	key_w = 0x57,
	key_x = 0x58,
	key_y = 0x59,
	key_z = 0x5A,
	key_num0 = 0x60,
	key_num1 = 0x61,
	key_num2 = 0x62,
	key_num3 = 0x63,
	key_num4 = 0x64,
	key_num5 = 0x65,
	key_num6 = 0x66,
	key_num7 = 0x67,
	key_num8 = 0x68,
	key_num9 = 0x69,
	key_f1  = 0x70,
	key_f2  = 0x71,
	key_f3  = 0x72,
	key_f4  = 0x73,
	key_f5  = 0x74,
	key_f6  = 0x75,
	key_f7  = 0x76,
	key_f8  = 0x77,
	key_f9  = 0x78,
	key_f10 = 0x79,
	key_f11 = 0x7A,
	key_f12 = 0x7B,
	key_comma = 0xBC,
	key_period = 0xBE,
	key_slash_fwd = 0xBF,
	key_slash_back = 0xDC,
	key_semicolon = 0xBA,
	key_apostrophe = 0xDE,
	key_bracket_open = 0xDB,
	key_bracket_close = 0xDD,
	key_minus = 0xBD,
	key_equals = 0xBB,
	key_backtick = 0xc0,
	key_lcmd = 0x5B,
	key_rcmd = 0x5C,
	key_multiply = 0x6A,
	key_add = 0x6B,
	key_subtract = 0x6D,
	key_decimal = 0x6E,
	key_divide = 0x6F,
	key_MAX = 0xFF,
} key_;
SK_API int                   input_pointer_count  (input_source_ filter sk_default(input_source_any));
SK_API pointer_t             input_pointer        (int32_t index, input_source_ filter sk_default(input_source_any));
SK_API const hand_t         *input_hand           (handed_ hand);
SK_API void                  input_hand_override  (handed_ hand, const hand_joint_t *hand_joints);
SK_API const controller_t   *input_controller     (handed_ hand);
SK_API button_state_         input_controller_menu();
SK_API const pose_t         *input_head           ();
SK_API const pose_t         *input_eyes           ();
SK_API button_state_         input_eyes_tracked   ();
SK_API const mouse_t        *input_mouse          ();
SK_API button_state_         input_key            (key_ key);
SK_API char32_t              input_text_consume   ();
SK_API void                  input_text_reset     ();
SK_API void                  input_hand_visible   (handed_ hand, bool32_t visible);
SK_API void                  input_hand_solid     (handed_ hand, bool32_t solid);
SK_API void                  input_hand_material  (handed_ hand, material_t material);
SK_API void                  input_subscribe      (input_source_ source, button_state_ event, void (*event_callback)(input_source_ source, button_state_ event, const sk_ref(pointer_t) pointer));
SK_API void                  input_unsubscribe    (input_source_ source, button_state_ event, void (*event_callback)(input_source_ source, button_state_ event, const sk_ref(pointer_t) pointer));
SK_API void                  input_fire_event     (input_source_ source, button_state_ event, const sk_ref(pointer_t) pointer);
typedef enum world_refresh_ {
	world_refresh_area,
	world_refresh_timer,
} world_refresh_;
SK_API bool32_t       world_has_bounds                ();
SK_API vec2           world_get_bounds_size           ();
SK_API pose_t         world_get_bounds_pose           ();
SK_API pose_t         world_from_spatial_graph        (uint8_t spatial_graph_node_id[16], bool32_t dynamic, int64_t qpc_time);
SK_API pose_t         world_from_perception_anchor    (void *perception_spatial_anchor);
SK_API bool32_t       world_try_from_spatial_graph    (uint8_t spatial_graph_node_id[16], bool32_t dynamic, int64_t qpc_time, pose_t *out_pose);
SK_API bool32_t       world_try_from_perception_anchor(void *perception_spatial_anchor,   pose_t *out_pose);
SK_API bool32_t       world_raycast                   (ray_t ray, ray_t *out_intersection);
SK_API void           world_set_occlusion_enabled     (bool32_t enabled);
SK_API bool32_t       world_get_occlusion_enabled     ();
SK_API void           world_set_raycast_enabled       (bool32_t enabled);
SK_API bool32_t       world_get_raycast_enabled       ();
SK_API void           world_set_occlusion_material    (material_t material);
SK_API material_t     world_get_occlusion_material    ();
SK_API void           world_set_refresh_type          (world_refresh_ refresh_type);
SK_API world_refresh_ world_get_refresh_type          ();
SK_API void           world_set_refresh_radius        (float radius_meters);
SK_API float          world_get_refresh_radius        ();
SK_API void           world_set_refresh_interval      (float every_seconds);
SK_API float          world_get_refresh_interval      ();
typedef enum backend_xr_type_ {
	backend_xr_type_none,
	backend_xr_type_simulator,
	backend_xr_type_openxr,
	backend_xr_type_webxr,
} backend_xr_type_;
typedef enum backend_platform_ {
	backend_platform_win32,
	backend_platform_uwp,
	backend_platform_linux,
	backend_platform_android,
	backend_platform_web,
} backend_platform_;
typedef enum backend_graphics_ {
	backend_graphics_none,
	backend_graphics_d3d11,
} backend_graphics_;
typedef uint64_t openxr_handle_t;
SK_API backend_xr_type_  backend_xr_get_type        ();