LibStereoKit.jl


# no prototype is found for this function at stereokit.h:1468:17, please use with caution
function platform_file_picker_visible()
    @ccall StereoKitC.platform_file_picker_visible()::bool32_t
end

function platform_read_file(filename_utf8, out_data, out_size)
    @ccall StereoKitC.platform_read_file(filename_utf8::Ptr{Cchar}, out_data::Ptr{Ptr{Cvoid}}, out_size::Ptr{Csize_t})::bool32_t
end

function platform_write_file(filename_utf8, data, size)
    @ccall StereoKitC.platform_write_file(filename_utf8::Ptr{Cchar}, data::Ptr{Cvoid}, size::Csize_t)::bool32_t
end

# no prototype is found for this function at stereokit.h:1472:17, please use with caution
function platform_keyboard_get_force_fallback()
    @ccall StereoKitC.platform_keyboard_get_force_fallback()::bool32_t
end

function platform_keyboard_set_force_fallback(force_fallback)
    @ccall StereoKitC.platform_keyboard_set_force_fallback(force_fallback::bool32_t)::Cvoid
end

function platform_keyboard_show(visible, type)
    @ccall StereoKitC.platform_keyboard_show(visible::bool32_t, type::text_context_)::Cvoid
end

# no prototype is found for this function at stereokit.h:1475:17, please use with caution
function platform_keyboard_visible()
    @ccall StereoKitC.platform_keyboard_visible()::bool32_t
end

@cenum input_source_::UInt32 begin
    input_source_any = 2147483647
    input_source_hand = 1
    input_source_hand_left = 2
    input_source_hand_right = 4
    input_source_gaze = 16
    input_source_gaze_head = 32
    input_source_gaze_eyes = 64
    input_source_gaze_cursor = 128
    input_source_can_press = 256
end

@cenum handed_::UInt32 begin
    handed_left = 0
    handed_right = 1
    handed_max = 2
end

@cenum button_state_::UInt32 begin
    button_state_inactive = 0
    button_state_active = 1
    button_state_just_inactive = 2
    button_state_just_active = 4
    button_state_changed = 6
    button_state_any = 2147483647
end

@cenum track_state_::UInt32 begin
    track_state_lost = 0
    track_state_inferred = 1
    track_state_known = 2
end

struct pointer_t
    source::input_source_
    tracked::button_state_
    state::button_state_
    ray::ray_t
    orientation::quat
end

struct hand_joint_t
    position::vec3
    orientation::quat
    radius::Cfloat
end

struct hand_t
    fingers::NTuple{5, NTuple{5, hand_joint_t}}
    wrist::pose_t
    palm::pose_t
    pinch_pt::vec3
    handedness::handed_
    tracked_state::button_state_
    pinch_state::button_state_
    grip_state::button_state_
    size::Cfloat
    pinch_activation::Cfloat
    grip_activation::Cfloat
end

struct controller_t
    pose::pose_t
    aim::pose_t
    tracked::button_state_
    tracked_pos::track_state_
    tracked_rot::track_state_
    stick_click::button_state_
    x1::button_state_
    x2::button_state_
    trigger::Cfloat
    grip::Cfloat
    stick::vec2
end

struct mouse_t
    available::bool32_t
    pos::vec2
    pos_change::vec2
    scroll::Cfloat
    scroll_change::Cfloat
end

@cenum key_::UInt32 begin
    key_none = 0
    key_mouse_left = 1
    key_mouse_right = 2
    key_mouse_center = 4
    key_mouse_forward = 5
    key_mouse_back = 6
    key_backspace = 8
    key_tab = 9
    key_return = 13
    key_shift = 16
    key_ctrl = 17
    key_alt = 18
    key_caps_lock = 20
    key_esc = 27
    key_space = 32
    key_end = 35
    key_home = 36
    key_left = 37
    key_right = 39
    key_up = 38
    key_down = 40
    key_page_up = 33
    key_page_down = 34
    key_printscreen = 42
    key_insert = 45
    key_del = 46
    key_0 = 48
    key_1 = 49
    key_2 = 50
    key_3 = 51
    key_4 = 52
    key_5 = 53
    key_6 = 54
    key_7 = 55
    key_8 = 56
    key_9 = 57
    key_a = 65
    key_b = 66
    key_c = 67
    key_d = 68
    key_e = 69
    key_f = 70
    key_g = 71
    key_h = 72
    key_i = 73
    key_j = 74
    key_k = 75
    key_l = 76
    key_m = 77
    key_n = 78
    key_o = 79
    key_p = 80
    key_q = 81
    key_r = 82
    key_s = 83
    key_t = 84
    key_u = 85
    key_v = 86
    key_w = 87
    key_x = 88
    key_y = 89
    key_z = 90
    key_num0 = 96
    key_num1 = 97
    key_num2 = 98
    key_num3 = 99
    key_num4 = 100
    key_num5 = 101
    key_num6 = 102
    key_num7 = 103
    key_num8 = 104
    key_num9 = 105
    key_f1 = 112
    key_f2 = 113
    key_f3 = 114
    key_f4 = 115
    key_f5 = 116
    key_f6 = 117
    key_f7 = 118
    key_f8 = 119
    key_f9 = 120
    key_f10 = 121
    key_f11 = 122
    key_f12 = 123
    key_comma = 188
    key_period = 190
    key_slash_fwd = 191
    key_slash_back = 220
    key_semicolon = 186
    key_apostrophe = 222
    key_bracket_open = 219
    key_bracket_close = 221
    key_minus = 189
    key_equals = 187
    key_backtick = 192
    key_lcmd = 91
    key_rcmd = 92
    key_multiply = 106
    key_add = 107
    key_subtract = 109
    key_decimal = 110
    key_divide = 111
    key_MAX = 255
end

function input_pointer_count(filter)
    @ccall StereoKitC.input_pointer_count(filter::input_source_)::Cint
end

function input_pointer(index, filter)
    @ccall StereoKitC.input_pointer(index::Int32, filter::input_source_)::pointer_t
end

function input_hand(hand)
    @ccall StereoKitC.input_hand(hand::handed_)::Ptr{hand_t}
end

function input_hand_override(hand, hand_joints)
    @ccall StereoKitC.input_hand_override(hand::handed_, hand_joints::Ptr{hand_joint_t})::Cvoid
end

function input_controller(hand)
    @ccall StereoKitC.input_controller(hand::handed_)::Ptr{controller_t}
end

# no prototype is found for this function at stereokit.h:1826:30, please use with caution
function input_controller_menu()
    @ccall StereoKitC.input_controller_menu()::button_state_
end

# no prototype is found for this function at stereokit.h:1827:30, please use with caution
function input_head()
    @ccall StereoKitC.input_head()::Ptr{pose_t}
end

# no prototype is found for this function at stereokit.h:1828:30, please use with caution
function input_eyes()
    @ccall StereoKitC.input_eyes()::Ptr{pose_t}
end

# no prototype is found for this function at stereokit.h:1829:30, please use with caution
function input_eyes_tracked()
    @ccall StereoKitC.input_eyes_tracked()::button_state_
end

# no prototype is found for this function at stereokit.h:1830:30, please use with caution
function input_mouse()
    @ccall StereoKitC.input_mouse()::Ptr{mouse_t}
end

function input_key(key)
    @ccall StereoKitC.input_key(key::key_)::button_state_
end

# no prototype is found for this function at stereokit.h:1832:30, please use with caution
function input_text_consume()
    @ccall StereoKitC.input_text_consume()::char32_t
end

# no prototype is found for this function at stereokit.h:1833:30, please use with caution
function input_text_reset()
    @ccall StereoKitC.input_text_reset()::Cvoid
end

function input_hand_visible(hand, visible)
    @ccall StereoKitC.input_hand_visible(hand::handed_, visible::bool32_t)::Cvoid
end

function input_hand_solid(hand, solid)
    @ccall StereoKitC.input_hand_solid(hand::handed_, solid::bool32_t)::Cvoid
end

function input_hand_material(hand, material)
    @ccall StereoKitC.input_hand_material(hand::handed_, material::material_t)::Cvoid
end

function input_subscribe(source, event, event_callback)
    @ccall StereoKitC.input_subscribe(source::input_source_, event::button_state_, event_callback::Ptr{Cvoid})::Cvoid
end

function input_unsubscribe(source, event, event_callback)
    @ccall StereoKitC.input_unsubscribe(source::input_source_, event::button_state_, event_callback::Ptr{Cvoid})::Cvoid
end

function input_fire_event(source, event, pointer)
    @ccall StereoKitC.input_fire_event(source::input_source_, event::button_state_, pointer::Ptr{pointer_t})::Cvoid
end

@cenum world_refresh_::UInt32 begin
    world_refresh_area = 0
    world_refresh_timer = 1
end

# no prototype is found for this function at stereokit.h:1859:23, please use with caution
function world_has_bounds()
    @ccall StereoKitC.world_has_bounds()::bool32_t
end

# no prototype is found for this function at stereokit.h:1860:23, please use with caution
function world_get_bounds_size()
    @ccall StereoKitC.world_get_bounds_size()::vec2
end

# no prototype is found for this function at stereokit.h:1861:23, please use with caution
function world_get_bounds_pose()
    @ccall StereoKitC.world_get_bounds_pose()::pose_t
end

function world_from_spatial_graph(spatial_graph_node_id, dynamic, qpc_time)
    @ccall StereoKitC.world_from_spatial_graph(spatial_graph_node_id::Ptr{UInt8}, dynamic::bool32_t, qpc_time::Int64)::pose_t
end

function world_from_perception_anchor(perception_spatial_anchor)
    @ccall StereoKitC.world_from_perception_anchor(perception_spatial_anchor::Ptr{Cvoid})::pose_t
end

function world_try_from_spatial_graph(spatial_graph_node_id, dynamic, qpc_time, out_pose)
    @ccall StereoKitC.world_try_from_spatial_graph(spatial_graph_node_id::Ptr{UInt8}, dynamic::bool32_t, qpc_time::Int64, out_pose::Ptr{pose_t})::bool32_t
end

function world_try_from_perception_anchor(perception_spatial_anchor, out_pose)
    @ccall StereoKitC.world_try_from_perception_anchor(perception_spatial_anchor::Ptr{Cvoid}, out_pose::Ptr{pose_t})::bool32_t
end

function world_raycast(ray, out_intersection)
    @ccall StereoKitC.world_raycast(ray::ray_t, out_intersection::Ptr{ray_t})::bool32_t
end

function world_set_occlusion_enabled(enabled)
    @ccall StereoKitC.world_set_occlusion_enabled(enabled::bool32_t)::Cvoid
end

# no prototype is found for this function at stereokit.h:1868:23, please use with caution
function world_get_occlusion_enabled()
    @ccall StereoKitC.world_get_occlusion_enabled()::bool32_t
end

function world_set_raycast_enabled(enabled)
    @ccall StereoKitC.world_set_raycast_enabled(enabled::bool32_t)::Cvoid
end

# no prototype is found for this function at stereokit.h:1870:23, please use with caution
function world_get_raycast_enabled()
    @ccall StereoKitC.world_get_raycast_enabled()::bool32_t
end

function world_set_occlusion_material(material)
    @ccall StereoKitC.world_set_occlusion_material(material::material_t)::Cvoid
end

# no prototype is found for this function at stereokit.h:1872:23, please use with caution
function world_get_occlusion_material()
    @ccall StereoKitC.world_get_occlusion_material()::material_t
end

function world_set_refresh_type(refresh_type)
    @ccall StereoKitC.world_set_refresh_type(refresh_type::world_refresh_)::Cvoid
end

# no prototype is found for this function at stereokit.h:1874:23, please use with caution
function world_get_refresh_type()
    @ccall StereoKitC.world_get_refresh_type()::world_refresh_
end

function world_set_refresh_radius(radius_meters)
    @ccall StereoKitC.world_set_refresh_radius(radius_meters::Cfloat)::Cvoid
end

# no prototype is found for this function at stereokit.h:1876:23, please use with caution
function world_get_refresh_radius()
    @ccall StereoKitC.world_get_refresh_radius()::Cfloat
end

function world_set_refresh_interval(every_seconds)
    @ccall StereoKitC.world_set_refresh_interval(every_seconds::Cfloat)::Cvoid
end

# no prototype is found for this function at stereokit.h:1878:23, please use with caution
function world_get_refresh_interval()
    @ccall StereoKitC.world_get_refresh_interval()::Cfloat
end

@cenum backend_xr_type_::UInt32 begin
    backend_xr_type_none = 0
    backend_xr_type_simulator = 1
    backend_xr_type_openxr = 2
    backend_xr_type_webxr = 3
end

@cenum backend_platform_::UInt32 begin
    backend_platform_win32 = 0
    backend_platform_uwp = 1
    backend_platform_linux = 2
    backend_platform_android = 3
    backend_platform_web = 4
end

@cenum backend_graphics_::UInt32 begin
    backend_graphics_none = 0
    backend_graphics_d3d11 = 1
end

const openxr_handle_t = uint64_t

# no prototype is found for this function at stereokit.h:1926:26, please use with caution
function backend_xr_get_type()
    @ccall StereoKitC.backend_xr_get_type()::backend_xr_type_
end
